--- a/easyshop/WebContent/front/detail.html
+++ b/easyshop/WebContent/front/detail.html
@@ -153,7 +153,7 @@
                                 if(data.status == "sucess"){
                                     location.href = "balance_writeOrder.html?selectedType=2";
                                 }else{
-                                    alert(data.status);
+                                    location.href = "login.html";
                                 }
                             },
                             error: function(err){
