--- a/easyshop/WebContent/front/personal_myOrder.html
+++ b/easyshop/WebContent/front/personal_myOrder.html
@@ -82,9 +82,9 @@
 	        										<div class="asTd col1">
 	        											<img ms-attr-src="good.imgs[0].imgsource" />
 	        										</div>
-	        										<p class="asTd col2">{{good.title}}</p>
+	        										<p class="asTd col2">{{good.name}}</p>
 	        										<p class="asTd col3">{{good.price}}</p>
-	        										<p class="asTd col4">{{good.num}}</p>
+	        										<p class="asTd col4">{{good.number}}</p>
 	        										<a class="link-grey aftersale" href="javascript:;" ms-click="applySaleafter(good.productId)" ms-visible="el.status == 102 || el.status == 103 || el.status == 104">申请售后</a>
 	        										<button class="yl-btn-add small btn-evaluate" ms-click="applyEvaluate(good.productId)" ms-visible="el.status == 104">评价</button>
 	        									</div>
